// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code renders correctly 1`] = `
<DocumentFragment>
  <div
    class="c-divider c-divider--solid"
    data-name="divider"
  >
    <div
      class="c-divider__content"
    >
      lorem ipsum dolor
    </div>
  </div>
</DocumentFragment>
`;

exports[`Code renders correctly a dashed divider 1`] = `
<DocumentFragment>
  <div
    class="c-divider c-divider--dashed"
    data-name="divider"
  >
    <div
      class="c-divider__content"
    >
      lorem ipsum dolor
    </div>
  </div>
</DocumentFragment>
`;
